Fixed text overflow bug on categories

--- a/app/styles/v2/Vivanuncios/partials/components/hamburgerMenu/_hamburgerMenu.scss
+++ b/app/styles/v2/Vivanuncios/partials/components/hamburgerMenu/_hamburgerMenu.scss
@@ -86,6 +86,9 @@ $borderColor: $headerMenuItemSeparatorColor;
 			display: block;
 			height: 100%;
 			width: 100%;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 		position: relative;
 		border-bottom: 1px solid $borderColor;
